[package]
name = "orderBook-rs"
version = "0.1.0"
authors = ["eddy <792130043@qq.com>"]
edition = "2018"



[dependencies]
## rdkafka = "~0.21"
kafka = "0.8"
# rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", branch = "master", features = ["cmake-build"] }
## rdkafka = { version = "0.23", features = ["cmake-build"] }
tokio = { version = "0.2.2", features = ["full"] }
futures = "0.3"
log = "0.4.0"
env_logger = "0.7.1"

jsonrpc-http-server = "12.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.10.1"
untrusted = "0.6.2"
##rust_decimal = "1.0.1"
num = "0.2"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
lazy_static = "1.3.0"
postgres = {version = "0.16.0-rc.2",features=["with-serde_json-1"]}
serde_json = "1.0.40"
rust_decimal = { version = "1.0.3", features = ["postgres"] }
rustc-serialize = "0.3.18"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.14.6"


[[bin]]
name = "orderBook"
path = "src/main.rs"

[rust]
channel = "nightly"

